it's working! (I guess)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div id="examiner" hidden>
         <div id="questionHolder"></div>
-        <button id="checkButton" class="uk-button uk-button-primary uk-width-1-1" type="button">Check</button>
+        <button id="checkButton" class="uk-button uk-button-primary uk-width-1-1" type="button" onclick="checkAnswers()">Check</button>
         <hr class="uk-divider-icon" id="qaSplit" >
 
         <div id="answersHolder"></div>
