Added end/error screen... TODO: add accuracy

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         <div id="answersHolder"></div>
     </div>
 
+    <div id="endScreen" hidden>    
+        <h1 id="titleText" class="uk-text-center uk-heading-xlarge uk-light">All questions answered!</h1>
+        <h2 id="subtitleText" class="uk-text-center uk-light">Accuracy: 69% </h2>
+        <button id="restartButton" class="uk-button uk-button-danger uk-width uk-button-large" type="button"onClick="window.location.reload();">Restart</button>
+    </div> 
+
 
     <script src="index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.5.9/js/uikit.min.js"
