Formatting, edited readme

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <!-- JS: subtitle -->
         </h2>
         <button id="restartButton" class="uk-button uk-button-danger uk-width uk-button-large" type="button"
-            onClick="window.location.reload();">Restartd</button>
+            onClick="window.location.reload();">Restart</button>
     </div>
 
 
