--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="uk-width-3-4@l uk-width-4-5@xl">
                 <div class="section-title"> 
                     <button class="exit-button uk-button uk-button-danger" type="button"
-                        onclick="window.location.reload();">
+                        onclick="(function(){if(confirm('Are you sure you want to leave?\nAll your progress will be lost!')){window.location.reload();}})();">
                         <a class="uk-link-reset" uk-icon="icon: sign-out; ratio: 1.1;"></a>
                     </button>
                     <span id="dlc-name">
