forgot to unhide title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <div id="title" hidden>
+    <div id="title">
         <div class="text">
             <h1 class="uk-light uk-text-center  uk-heading-xlarge">Examiner</h1>
             <h3 class="uk-light uk-text-center">Let the game begin</h3>
