--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.5.9/css/uikit.min.css" />
-    <link rel="stylesheet" href="css/index.css?v=3">
+    <link rel="stylesheet" href="css/index.css?v=5">
     <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
 </head>
 
@@ -73,7 +73,7 @@
 
                 <zero-md id="md-holder" src=""> <!-- JS: MD -->
                     <template>
-                        <link rel="stylesheet" href="css/md.css">
+                        <link rel="stylesheet" href="css/md.css?v=5">
                         <link
                             rel="stylesheet"
                             href="https://cdn.jsdelivr.net/gh/PrismJS/prism@1/themes/prism.min.css"
@@ -134,10 +134,10 @@
         </p>
     </div>
 
-    <script src="js/utils.js?v=3"></script>
-    <script src="js/examiner.js?v=3"></script>
-    <script src="js/interpret.js?v=3"></script>
-    <script src="js/index.js?v=3"></script>
+    <script src="js/utils.js?v=5"></script>
+    <script src="js/examiner.js?v=5"></script>
+    <script src="js/interpret.js?v=5"></script>
+    <script src="js/index.js?v=5"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.5.9/js/uikit.min.js"
         integrity="sha512-OZ9Sq7ecGckkqgxa8t/415BRNoz2GIInOsu8Qjj99r9IlBCq2XJlm9T9z//D4W1lrl+xCdXzq0EYfMo8DZJ+KA=="
